responsive font for name

--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -110,7 +110,7 @@ a.theme-link {
 }
 
 .resume-name {
-	font-size: 2.75rem;
+	font-size: calc(100% + 1vw + 1vh);;
 	font-weight: 900;
 	letter-spacing: 0.4rem;
 	color: $theme-color-primary;
