--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
 
                     <div class="row">
 
-                        <div class="resume-main col-12 col-lg-8 col-xl-9 pr-0 pr-lg-5">
+                        <div class="resume-main col-12 pr-0 pr-lg-5">
 
                             {{ if .Site.Params.experience.enable }}
                             {{ partial "experience.html" . }}
@@ -46,7 +46,7 @@
 
                         </div><!--//resume-main-->
 
-                        {{ partial "sidebar.html" . }}
+                        <!-- {{ partial "sidebar.html" . }} -->
 
                     </div><!--//row-->
 
