--- a/layouts/partials/skills_full.html
+++ b/layouts/partials/skills_full.html
@@ -6,14 +6,16 @@
                                 {{ range .Site.Params.skills.list }}
                                 <div class="item mb-3">
                                     <div class="item-heading row align-items-center mb-2">
-                                        <h4 class="item-title col-12 col-md-6 col-lg-6 mb-2 mb-md-0">{{ .title }}</h4>
-                                        <div class="item-meta col-12 col-md-6 col-lg-6 text-muted text-left text-md-right">{{ .company }} | {{ .dates }}</div>
+                                        <h4 class="item-title col-12">{{ .title }}</h4>
                                     </div>
                                     <div class="item-content">
                                         <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
                                         <ul class="resume-list">
                                             {{ range .items }}
-                                            <li>{{ with .details }}{{ . | markdownify }}{{ end }}</li>
+                                            <li>{{ with .title }}{{ . | markdownify }}{{ end }}</li>
+                                                {{ if .details_enable }}
+                                                <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
+                                                {{ end }}
                                             {{ end }}
                                         </ul>
                                     </div>
