--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,4 +11,6 @@
             <small class="copyright text-muted">Designed with <i class="fas fa-heart"></i> by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
             <br>
             <small class="copyright">{{ now.Year }} &copy; {{ with .Site.Params.footer.copyright }}{{ . | markdownify }}{{ else }}Ported to Hugo by <a href="https://github.com/cowboysmall" target="_blank">CowboySmall</a>{{ end }}</small>
+            <br>
+            <small class="copyright">Customized by <a href="https://github.com/mohammad-rahchamani" target="_blank">Mohammad Rahchamani</a></small>
         </footer>
