--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,14 @@
 
 <body>
 
+    <div class="col">
+        <br>
+    </div>
+
+    <div class="px-3 float-right">
+        <button type="button" class="btn btn-dark"><a href="{{.Site.Params.pdf}}" download>Download PDF version</a></button>
+    </div>
+
     <div class="main-wrapper">
 
         <div class="container px-3 px-lg-5">
